fix typos in approximate_*

--- a/code/approximate_cdf_with_hist.ipynb
+++ b/code/approximate_cdf_with_hist.ipynb
@@ -827,7 +827,7 @@
     "\\begin{align}\n",
     "    \\lambda(X; \\theta) &= \\sqrt{\\frac{1}{N}\\sum_\\text{histograms} \\sum_i \\left( \\frac{D_i - T_i(\\theta)}{\\delta_i} \\right)^2},\n",
     "\\end{align}\n",
-    "where $N$ is the total number of bins summed over histograms and $\\delta_I^2$ is the sum of the variances associated with the data $D_i$ and the theoretical prediction $T_i$ with the latter obtained via Monte Carlo simulation."
+    "where $N$ is the total number of bins summed over histograms and $\\delta_i^2$ is the sum of the variances associated with the data $D_i$ and the theoretical prediction $T_i$ with the latter obtained via Monte Carlo simulation."
    ]
   },
   {
@@ -1188,8 +1188,8 @@
    "metadata": {},
    "source": [
     "### Compute the 3 test statistics\n",
-    "To test the procedure, we'll use the simulated data corresponding to the best fit point as the \"observed\" data in lieu of the ALEPH data. We do this so that the simulated data has the same statistical power as the *fixed* \"observed\" data since they have the same integrated luminosity.\n",
-    "To use the ALEPH data the simulated data needs to match the statistical power of the former.\n",
+    "To test the procedure, we'll use the simulated data corresponding to the best fit point as the \"observed\" data in lieu of the ALEPH data. We do this so that the simulated data have the same statistical power as the *fixed* \"observed\" data since they have the same integrated luminosity.\n",
+    "To use the ALEPH data the simulated data needs to match the statistical power of the former, that is, the simulated data must be sampled from the same distribution as the observed data except that the simulated data, necessarily, are sampled using different hypotheses for the tune parameters.\n",
     "\n",
     "  1. `l0` = $\\lambda_0(D; \\theta)$ computed with *fixed* \"observed\" data and predictions at $\\theta_i$.\n",
     "  2. `lp` = $\\lambda^\\prime({\\cal D}^\\prime; \\theta)$ computed with simulated data at $\\theta^\\prime_i$ and predictions at $\\theta_i$.\n",
@@ -1231,20 +1231,19 @@
     "jj = np.array(list(range(M)))\n",
     "np.random.shuffle(jj)\n",
     "\n",
-    "# test statistic with \"observed\" data\n",
+    "# 1. test statistic with \"observed\" data\n",
     "l0 = []\n",
     "for ii in tqdm(range(M)):\n",
     "    l0.append( test_statistic(hist_names, dfbest, dfnews[ii], which=1) )\n",
     "l0 = np.array(l0)\n",
     "\n",
-    "# test statistic with simulated data at random parameter point \n",
-    "# with respect to that of predictions\n",
+    "# 2. test statistic with simulated \"observed\" data\n",
     "lp = []\n",
     "for ii in tqdm(range(M)):\n",
     "    lp.append( test_statistic(hist_names, dfsims[jj[ii]], dfnews[ii], which=1) )\n",
     "lp = np.array(lp)\n",
     "\n",
-    "# test statistic with simulated data at same parameter point as predictions\n",
+    "# 3. test statistic with simulated data and predictions at the same parameter point\n",
     "l  = []\n",
     "for ii in tqdm(range(M)):\n",
     "    l.append( test_statistic(hist_names, dfsims[ii], dfnews[ii], which=1) )\n",
